--- a/docs/team/limhawjia.adoc
+++ b/docs/team/limhawjia.adoc
@@ -87,7 +87,7 @@ Most of the changes can be summarized into the 4 following sections :_
 * Highlights : +
   In addition to taking notes in the form of text, user's are also able to sketch their ideas within a a sketch pad and have them saved for future reference. This is particularly useful when dealing with data structures.
 
-=== Tabs - [design]
+=== Tabs - [feature]
 * What it does  : +
   Splits the various functions of the application, _browsing and viewing of questions_, _attempting of questions and evaluation of results_, _note-taking_, into individual tabs.
 
@@ -122,7 +122,10 @@ Most of the changes can be summarized into the 4 following sections :_
  * Highlights : automatically saves any changes that the user has made to his solution and notes before exiting the application.
 
 == Summary of contributions
-
+* [Refactor] - Redesign underlying architecture
+* [Major Feature] - Evaluation of user program
+* [Major Feature] - Note-taking feature
+* [Minor Feature] - Tabs
 
 == Other Contributions
 
@@ -156,8 +159,11 @@ On RepoSense, you can select options to view my functional code and test code.
 |===
 
 include::../UserGuide.adoc[tag=overview]
+
 include::../UserGuide.adoc[tag=beforestart]
+
 include::../UserGuide.adoc[tag=submit]
+
 include::../UserGuide.adoc[tag=notes]
 
 == Contributions to the Developer Guide
