--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -37,8 +37,7 @@ In particular, the intended audience of this document will be the students takin
 === Description
 
 _PalPay_ is a CLI application targeted for users who have poor financial management skills. The users should also prefer typing over mouse inputs.
-It allows the users to keep track of daily financial transactions, as well as set a budget for a time duration to achieve long-term financial success.
-Not only that, users can keep a ledger of lending and borrowing of money with others so that the users can keep track of the flow of their money.
+It allows the users to keep track of daily financial transactions, as well as set a budget for a time duration to achieve long-term financial success. Additionally, users can keep a ledger of lending and borrowing of money with others so that the users can keep track of the flow of their money.
 
 == Setting up
 
